--- a/.github/workflows/xmasdev_manual_mp3.yml
+++ b/.github/workflows/xmasdev_manual_mp3.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Manual workflow
+name: XMAS Dev Manual MP3
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -10,9 +10,9 @@ on:
     inputs:
       name:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
+        description: 'Output filename'
         # Default value if no value is explicitly provided
-        default: 'World'
+        default: 'xmasdev.mp3'
         # Input has to be provided for the workflow to run
         required: true
 
@@ -25,6 +25,12 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        path: main
+
+# Runs a single command using the runners shell
+    - name: create file
+      shell: bash
+      run: ./XMASDEV/2022/banners/Source/createaudiofile.sh #echo "Hello ${{ github.event.inputs.name }}"
