--- a/.github/workflows/xmasdev_manual_mp3.yml
+++ b/.github/workflows/xmasdev_manual_mp3.yml
@@ -33,4 +33,4 @@ jobs:
 # Runs a single command using the runners shell
     - name: create file
       shell: bash
-      run: ./Eventi/XMASDEV/2022/banners/Source/createaudiofile.sh #echo "Hello ${{ github.event.inputs.name }}"
+      run: $HOME/Eventi/XMASDEV/2022/banners/Source/createaudiofile.sh #echo "Hello ${{ github.event.inputs.name }}"
