--- a/.github/workflows/xmasdev_manual_mp3.yml
+++ b/.github/workflows/xmasdev_manual_mp3.yml
@@ -29,7 +29,8 @@ jobs:
       uses: actions/checkout@v3
       #with:
       #  path: main
-
+    - uses: FedericoCarboni/setup-ffmpeg@v2
+      id: setup-ffmpeg
 # Runs a single command using the runners shell
       #echo "Hello ${{ github.event.inputs.name }}"
     - name: create file
