--- a/.github/workflows/xmasdev_manual_mp3.yml
+++ b/.github/workflows/xmasdev_manual_mp3.yml
@@ -35,5 +35,7 @@ jobs:
       #echo "Hello ${{ github.event.inputs.name }}"
     - name: create file
       #shell: bash
-      run: bash XMASDEV/2022/banners/Source/createaudiofile.sh 
+      run: |
+        cd XMASDEV/2022/banners/Source
+        bash createaudiofile.sh 
 
