--- a/.github/workflows/xmasdev_manual_mp3.yml
+++ b/.github/workflows/xmasdev_manual_mp3.yml
@@ -37,5 +37,5 @@ jobs:
       #shell: bash
       run: |
         cd XMASDEV/2022/banners/Source
-        bash createaudiofile.sh 
+        bash createaudiofile.sh xmasdev.mp3
 
