--- a/.github/workflows/xmasdev_manual_mp3.yml
+++ b/.github/workflows/xmasdev_manual_mp3.yml
@@ -46,5 +46,5 @@ jobs:
         git config user.name ${{ secrets.GIT_NAME }}
         git add .
         git commit -m 'created audio file'
-        git push -f
+        git push -f origin master
 
