--- a/.github/workflows/xmasdev_youtubevideo.yml
+++ b/.github/workflows/xmasdev_youtubevideo.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: XMAS Dev Manual MP3
+name: XMAS Dev Manual Youtube Videos
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
